# TCP-Server-Application

./: README.md  mainwindow.cpp
testapi/: CMakeLists.txt  mainwindow.cpp
testcurl/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  untitled_en_GD.ts
